--- a/.travis.yml
+++ b/.travis.yml
@@ -14,18 +14,21 @@ jobs:
   include:
     - stage: test
       script:
-        - make coverage
+        - make ci
       python: '3.5'
     - stage: test
       script:
-        - make coverage
+        - make ci
       python: '3.6'
     - stage: test
       script:
-        - make coverage
+        - make ci
       python: '3.7'
       dist: xenial
       sudo: true
+    - stage: coverage
+      python: '3.6'
+      script: codecov
 
 notifications:
   email: false
