--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
       sudo: true
     - stage: coverage
       python: '3.6'
-      script: codecov
+      script:
         - make coverage
         - codecov
 
