--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ max-line-length = 119
 combine_as_imports = true
 default_section = THIRDPARTY
 include_trailing_comma = true
-known_first_party = jobmonitor
+known_first_party = lbjobmonitor
 multi_line_output = 5
 not_skip = __init__.py
 skip=
