--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"e1839a8" = {path = ".", editable = true, extras = ["slack"]}
+"e1839a8" = {path = ".", editable = true, extras = ["slack", "telegram"]}
 
 [dev-packages]
 pytest = "*"
