--- a/setup.cfg
+++ b/setup.cfg
@@ -10,12 +10,13 @@ max-line-length = 119
 combine_as_imports = true
 default_section = THIRDPARTY
 include_trailing_comma = true
-known_first_party = lbjobmonitor
-multi_line_output = 5
-not_skip = __init__.py
-skip=
-force_single_line = true
-line_length = 119
+multi_line_output = 3
+skip=.mypy_cache/
+force_single_line = false
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 79
 
 [bdist_wheel]
 universal=1
